--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgb(31, 31, 31);
+    background-color: rgb(48, 48, 48);
 }
 
 .primary-button{
@@ -7,11 +7,47 @@
     color: white;
 }
 
+.primary-button:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+}
+
+.btn-danger{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 1px black;
+}
+
+.btn-danger:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+}
+
+.btn-dark{
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+.btn-dark:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+}
+
+.btn-primary{
+    background-color: rgb(117, 4, 4);
+    color: white;
+}
+
+.btn-primary:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+}
+
 .div-card{
     padding: 2rem 1rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
-    background-color: #858585;
+    background-color: rgb(207, 207, 207);
     border-radius: .3rem;
 }
 
@@ -20,5 +56,5 @@
 }
 
 .card {
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(189, 189, 189);
 }
